# backend

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile  openapi.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/gitea-client/: Cargo.toml
crates/gitea-client/src/: error.rs  lib.rs
crates/gitea-client/src/client/: hook.rs  mod.rs  organization.rs  repository.rs  user.rs
crates/gitea-client/src/types/: commit.rs  event.rs  hook.rs  mod.rs  organization.rs  repository.rs  team.rs  user.rs
crates/harbor-client/: Cargo.toml
crates/harbor-client/src/: error.rs
crates/harbor-client/src/client/: mod.rs  project.rs
crates/harbor-client/src/types/: mod.rs  project.rs
migrations/: 0001_initial_setup.sql  0002_add_weight_to_stages_and_extensions.sql  0003_add_logo_to_courses.sql  0004_add_stage_count_to_courses_and_extensions.sql  0005_better_auth_setup.sql  0006_user_course_and_stage_tables.sql  0007_add_unique_constraints_to_user_tables.sql  0008_create_jwks_table.sql  0009_drop_solutions_table_and_add_solution_to_stages.sql  0010_add_test_to_user_stages.sql  0011_remove_uuid_defaults.sql  0012_add_release_status_index.sql  0013_add_timezone_to_timestamps.sql
src/: app.rs  config.rs  constant.rs  context.rs  database.rs  errors.rs  extractor.rs  lib.rs  logger.rs  main.rs  routes.rs  swagger.rs
src/extractor/: basic.rs  claims.rs  mod.rs
src/handler/: course.rs  extension.rs  git.rs  mod.rs  stage.rs  webhook.rs  workflow.rs
src/handlers/: git.rs  mod.rs  workflow.rs
src/model/: attempt.rs  course.rs  extension.rs  mod.rs  solution.rs  stage.rs  user.rs
src/repository/: course.rs  extension.rs  mod.rs  solution.rs  stage.rs  user.rs
src/request/: course.rs  event.rs  gitea.rs  mod.rs  stage.rs  workflow.rs
src/response/: attempt.rs  course.rs  extension.rs  mod.rs  stage.rs  workflow.rs
src/schema/: course.rs  extension.rs  manifest.rs  mod.rs  parser.rs  stage.rs
src/service/: course.rs  extension.rs  git.rs  mod.rs  pipeline.rs  registry.rs  repository.rs  stage.rs  storage.rs  workflow.rs
src/services/: course.rs  mod.rs  storage.rs  workflow.rs
src/utils/: crypto.rs  git.rs  keys.rs  mod.rs  url.rs
tests/: course-parser-tests.rs
