[workspace]
members = [
    "crates/gitea-client",
]
resolver = "2"

[package]
name = "backend"
description = "Backend API and services for StackClass"
version = "0.30.0"
edition = "2024"

default-run = "stackclass-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stackclass"
path = "src/lib.rs"

[[bin]]
name = "stackclass-server"
path = "src/bin/stackclass-server.rs"

[[bin]]
name = "openapi-generator"
path = "src/bin/openapi-generator.rs"

[dependencies]
# internal crates
gitea-client = { path = "crates/gitea-client" }

anyhow = "1.0.98"
axum = { version = "0.8.4" }
axum-extra = {version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.1.2"
fs_extra = "1.3.0"
futures = "0.3.31"
ghrepo = "0.7.1"
http-body-util = "0.1.3"
indexmap = {version = "2.9.0", features = ["serde"] }
jsonwebtoken = "9.3.1"
k8s-openapi = { version = "0.25", default-features = false, features = ["latest"] }
kube = { version = "1", default-features = false, features = ["runtime", "derive", "rustls-tls"] }
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yml = "0.0.12"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
walkdir = "2.5.0"
