[workspace]
members = [
    "crates/gitea-client",
    "crates/harbor-client",
]
resolver = "2"

[package]
name = "backend"
description = "Backend API and services for StackClass"
version = "1.3.1"
edition = "2024"

default-run = "stackclass-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stackclass"
path = "src/lib.rs"

[[bin]]
name = "stackclass-server"
path = "src/bin/stackclass-server.rs"

[[bin]]
name = "openapi-generator"
path = "src/bin/openapi-generator.rs"

[dependencies]
# internal crates
gitea-client = { path = "crates/gitea-client" }
harbor-client = { path = "crates/harbor-client" }

anyhow = "1.0.101"
axum = { version = "0.8.8" }
axum-extra = {version = "0.12.5", features = ["typed-header"] }
base64 = "0.22.1"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive", "env"] }
dotenv = "0.15.0"
flate2 = "1.1.8"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.31"
ghrepo = "0.7.1"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
indexmap = {version = "2.13.0", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
k8s-openapi = { version = "0.27", default-features = false, features = ["latest"] }
kube = { version = "3", default-features = false, features = ["runtime", "derive", "rustls-tls"] }
octocrab = "0.49.5"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
subtle = "2.6.1"
tar = "0.4.44"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
